--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,16 @@
     "browser_action": {
         "default_icon": "icon.png",
         "default_popup": "popup.html"
-    }
+    },
+    
+    "background": {
+        "scripts": ["background.js"]
+    },
+
+    "content_scripts": [
+        {
+            "matches": ["http://*/*", "https://*/*"],
+            "js": ["myScript.js"]
+        }
+    ]
 }
